# kursach_website

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/api/: data_utils.py  router.py  schemas.py
app/api/endpoints/: health.py  market.py  predict.py
app/ui/: router.py
app/ui/static/css/: style.css
app/ui/static/js/: app.js
app/ui/templates/: base.html  index.html
