[project]
name = "btcforecastpdt"
version = "0.1.0"
description = ""
authors = [
    {name = "Danila Riazanov",email = "nixlle@rambler.ru"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.133.0,<0.134.0)",
    "yfinance (>=1.2.0,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
